--- a/CommunicationBetweenConponents/Pages/Counter.razor
+++ b/CommunicationBetweenConponents/Pages/Counter.razor
@@ -3,15 +3,20 @@
 
 @page "/counter"
 
-<h1><span style="color: pink">Cute</span> VS. <span style="color: @newColorFromChildConponent"> Handsome</span></h1>
+<h1 style="min-height:100px;" ><span style="color: pink">Cute</span> VS. <span style="color: @newColorFromChildConponent"> Handsome</span></h1>
 
-<p>
-    <label><span class="d-block mt-3 mb-1">Pink: @value</span>   <RadzenSlider @bind-Value=@value TValue="int" Min="0" Max="100" Change=@(arg => OnChange(arg)) Style="width: 400px" /><span class="d-block mt-3 mb-1">Blue : @(100-value)</span></label>
-</p>
+<div class="row justify-content-center w-100" style=" min-height:100px">
+    <span class="d-block mt-3 mb-1">Child 1 : @value</span>   <RadzenSlider @bind-Value=@value TValue="int" Min="0" Max="100" Change=@(arg => OnChange(arg)) Style="width: 600px" /><span class="d-block mt-3 mb-1">Child 2 : @(100-value)</span>
+</div>
 <div class="row align-middle">
-    <div class="col-md-5">   <ArgGuaugescale Fill="@Color.Pink.Name" ShowColorPicker="false"></ArgGuaugescale></div>
+    <div class="col-md-5">   <ArgGuaugescale Fill="@Color.Pink.Name" ShowColorPicker="false" ShowScale="true" ScaleChanged="@ScaleChanged"></ArgGuaugescale></div>
     <div class="col-md-2"><img src="images/giphy.gif" width="120" height="120"/> </div>
-    <div class="col-md-5">  <ArgGuaugescale Fill="@newColorFromChildConponent" ShowColorPicker="true" ColorChanged="@ColorChanged"></ArgGuaugescale></div>
+    <div class="col-md-5">
+     
+            <ArgGuaugescale @ref="ChildRight" Fill="@newColorFromChildConponent" ShowColorPicker="true" ShowScale="false" ColorChanged="@ColorChanged"></ArgGuaugescale>
+
+
+</div>
  
    
 </div>
@@ -19,6 +24,7 @@
 
 
 @code {
+    public ArgGuaugescale ChildRight;
 
     int value = 50;
 
@@ -41,6 +47,13 @@
     void ColorChanged(string newColor)
     {
         newColorFromChildConponent = newColor;
-         StateHasChanged();
+        StateHasChanged();
+    }
+
+    void ScaleChanged(int newScale)
+    {
+        value = newScale;
+        ChildRight.value = 100 - value;
+        StateHasChanged();
     }
 }
